attempting to merge config files

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,6 +42,8 @@ jobs:
           - mojombo
           - themes
           - jekyll-include-cache
+          - future-false
+          - future-true
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
